--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/src/index.js",
+    "ts:start": "ts-node src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
