--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "ts:start": "ts-node src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
